# pwr_projekt_ak2

./: README.md
pwr_projekt_ak2/: CMakeLists.txt  main.cpp
pwr_projekt_ak2/source/: ArithmeticLibrary.cpp  ArithmeticLibrary.h  CMakeLists.txt  TwosComplement_ArithmeticLibrary.cpp  TwosComplement_ArithmeticLibrary.h  TwosComplement_Exception.cpp  TwosComplement_Exception.h  TwosComplement_Num.cpp  TwosComplement_Num.h  main.cpp  testy.cpp
pwr_projekt_ak2/tests/: CMakeLists.txt
pwr_projekt_ak2/tests/calcTests/: AddTests.cpp  CMakeLists.txt  DivideTests.cpp  MultiplyTests.cpp  SubtractTests.cpp
